fix: 修复lambda类型推断问题并优化安全配置
修复多处lambda表达式类型推断问题，改用传统循环方式实现过滤
优化SecurityConfig配置，启用跨域并开放IM接口
替换List.of()为Collections.emptyList()以提高兼容性